[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/head.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.430125, 0.26897, 0.576146 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.401719, 1.58732, 6.49904 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0520018, 0 )
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.225977, 0 )
shape = SubResource( 1 )

[node name="Head_Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="head" parent="Head_Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2 )

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReviveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="OverheatTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PanelHitbox" type="Area" parent="." groups=["plate"]]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="right" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( 0.061546, -0.0188704, 0, 0.0164912, 0.0704254, 0, 0, 0, 0.0181041, 0.423, 0.351, 0 )
shape = SubResource( 2 )

[node name="left" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( 0.061546, 0.0188704, 0, -0.0164912, 0.0704254, 0, 0, 0, 0.0181041, -0.423, 0.351, 0 )
shape = SubResource( 2 )

[node name="back" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( -2.6172e-09, -1.09001e-09, 0.0181041, -0.0217925, 0.0685127, 0, -0.0598745, -0.0249366, -7.91355e-10, 0, 0.351, 0.55 )
shape = SubResource( 2 )

[node name="front" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( -2.6172e-09, 1.09001e-09, 0.0181041, 0.0217925, 0.0685127, 0, -0.0598745, 0.0249366, -7.91355e-10, 0, 0.351, -0.55 )
shape = SubResource( 2 )

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="FireCooldown" to="." method="_on_FireCooldown_timeout"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_ReviveTimer_timeout"]
[connection signal="timeout" from="OverheatTimer" to="." method="_on_OverheatTimer_timeout"]
[connection signal="body_entered" from="PanelHitbox" to="." method="_on_PanelHitbox_body_entered"]
[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
